added animated scroll down and fadeIn function for iframe

--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,14 @@
 			<input type="button" class="button adventurous" value="Adventurous">
 		</div>
 		
-		<div id="container">
-			<iframe scrolling="no" id="iframe" src="https://www.rottentomatoes.com/m/jason_bourne"></iframe>
+		<div id="question">
+			<p>Have you tried this movie before?</p>
 		</div>
+		<div id="container">
+			<iframe scrolling="no" id="iframe" src="https://www.rottentomatoes.com/m/dont_think_twice" sandbox></iframe>
+			<div id="cover"></div>
+		</div>
+		
 		
 		<div id="footer">
 			<p>copyright &copy YoungChul Chun</p>
