changed few things

--- a/public/index.html
+++ b/public/index.html
@@ -22,14 +22,17 @@
 			<input type="button" class="button adventurous" value="Adventurous">
 		</div>
 		
-		<div id="question">
-			<p>Have you tried this movie before?</p>
-		</div>
+		<div id="block"></div>
+		
 		<div id="container">
-			<iframe scrolling="no" id="iframe" src="https://www.rottentomatoes.com/m/dont_think_twice" sandbox></iframe>
+			<iframe scrolling="no" id="iframe" src="https://www.rottentomatoes.com/m/suicide_squad_2016" sandbox></iframe>
 			<div id="cover"></div>
 		</div>
 		
+		<div id="question">
+			<p>Have you tried this movie before?</p>
+			<p><a href="https://www.rottentomatoes.com/m/suicide_squad_2016">here</a> to go to the website.</p>
+		</div>
 		
 		<div id="footer">
 			<p>copyright &copy YoungChul Chun</p>
