--- a/public/index.html
+++ b/public/index.html
@@ -25,13 +25,13 @@
 		<div id="block"></div>
 		
 		<div id="container">
-			<iframe scrolling="no" id="iframe" src="https://www.rottentomatoes.com/m/suicide_squad_2016" sandbox></iframe>
+			<iframe scrolling="no" id="iframe" src="https://www.rottentomatoes.com/m/ben_hur_2016" sandbox></iframe>
 			<div id="cover"></div>
 		</div>
 		
 		<div id="question">
 			<p>Have you tried this movie before?</p>
-			<p><a href="https://www.rottentomatoes.com/m/suicide_squad_2016">here</a> to go to the website.</p>
+			<p>Click <a href="https://www.rottentomatoes.com/m/suicide_squad_2016">here</a> to go to RottenTomatoes website.</p>
 		</div>
 		
 		<div id="footer">
