--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 		
 		<div id="question">
 			<p>Have you tried this movie before?</p>
-			<p>Click <a href="https://www.rottentomatoes.com/m/suicide_squad_2016">here</a> to go to RottenTomatoes website.</p>
+			<p>Click <a id="link" href="">here</a> to go to RottenTomatoes website.</p>
 		</div>
 		
 		<div id="footer">
